cmake_minimum_required(VERSION 3.25)
project(ps_ver2)

set(CMAKE_CXX_STANDARD 17)

add_executable(ps_ver2
#        main.cpp
#        io/2557.cpp
#        io/10992.cpp
#        io/2522.cpp
#        dp/1463.cpp
#        dp/11726.cpp
#        dp/11727.cpp
#        dp/9095.cpp
#        dp/10844.cpp
#        dp/11057.cpp
#        dp/2193.cpp
#        dp/9465.cpp
#        dp/2156.cpp
#        dp/11053.cpp
#        dp/11055.cpp
#        dp/11722.cpp
#        dp/11054.cpp
#        dp/1912.cpp
#        dp/2579.cpp
#        dp/1699.cpp
        dp/2133.cpp)

